PROJECT(V-Fit)

SUBDIRS(VS)

SET(Detectors_DIR ${PROJECT_SOURCE_DIR}/.cmake)
FIND_PACKAGE(Detectors REQUIRED)

SET(DaqDataDecoding_DIR ${PROJECT_SOURCE_DIR}/.cmake)
FIND_PACKAGE(DaqDataDecoding REQUIRED)

SET(ROOT_DIR ${PROJECT_SOURCE_DIR}/.cmake)
FIND_PACKAGE(ROOT REQUIRED)

INCLUDE_DIRECTORIES( ${ROOT_INCLUDE_DIR} ${Detectors_INCLUDE_DIR})

ADD_EXECUTABLE(V V.cc Vmain.cc)

TARGET_LINK_LIBRARIES(V ${Detectors_LIBRARIES} ${ROOT_LIBRARIES} -lMinuit ${DaqDataDecoding_LIBRARIES} -lexpat popt)

#INSTALL(TARGETS dcs
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#INSTALL(FILES ${CS_doc} DESTINATION doc/CS)
