PROJECT(V-Fit)

SET(Detectors_DIR ${PROJECT_SOURCE_DIR}/.cmake)
FIND_PACKAGE(Detectors REQUIRED)

SET(DaqDataDecoding_DIR ${PROJECT_SOURCE_DIR}/.cmake)
FIND_PACKAGE(DaqDataDecoding REQUIRED)

SET(ROOT_DIR ${PROJECT_SOURCE_DIR}/.cmake)
FIND_PACKAGE(ROOT REQUIRED)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} ${ROOT_INCLUDE_DIR} ${Detectors_INCLUDE_DIR} )

ADD_EXECUTABLE(V V.cc Vmain.cc VS/VS.cc)
TARGET_LINK_LIBRARIES(V ${Detectors_LIBRARIES} ${ROOT_LIBRARIES} -lMinuit ${DaqDataDecoding_LIBRARIES} expat popt)
SET_TARGET_PROPERTIES(V PROPERTIES
                      INSTALL_RPATH "${Detectors_ROOT}/lib;`root-config --libdir`")

INSTALL(TARGETS V
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

