PROJECT(STRAW-dcs)

SET(ROOT_DIR ${PROJECT_SOURCE_DIR}/../.cmake )
FIND_PACKAGE(ROOT REQUIRED)

INCLUDE_DIRECTORIES( ${ROOT_INCLUDE_DIR} ${DaqDataDecoding_INCLUDE_DIR})

FILE(GLOB DCS_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)

ADD_EXECUTABLE(dcs ${DCS_SRC})
TARGET_LINK_LIBRARIES(dcs ${ROOT_LIBRARIES} popt)

INSTALL(TARGETS dcs
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
